update projects page

--- a/index.html
+++ b/index.html
@@ -39,11 +39,32 @@
         </main>
     </div>
 
-<script src="scripts/animator.js"></script>
-<script src="scripts/http.js"></script>
-<script src="scripts/render.js"></script>
-<script src="scripts/theme.js"></script>
-<script src="scripts/router.js"></script>
-<script src="scripts/main.js"></script>
+    <!-- Модальное окно добавляем здесь (в корне body) -->
+    <div class="modal-overlay"></div>
+    <div class="modal-container">
+        <button class="modal-close">✕</button>
+        <div class="modal-content">
+            <div class="modal-image-container"></div>
+            <h2 class="modal-title"></h2>
+            <p class="modal-description"></p>
+            <div class="modal-features">
+                <h4>Особенности:</h4>
+                <ul class="features-list"></ul>
+            </div>
+            <div class="modal-tasks">
+                <h4>Реализованные задачи:</h4>
+                <ul class="tasks-list"></ul>
+            </div>
+            <a href="#" class="github-link" target="_blank">Посмотреть на GitHub</a>
+        </div>
+    </div>
+
+    <script src="scripts/animator.js" type="module"></script>
+    <script src="scripts/http.js" type="module"></script>
+    <script src="scripts/render.js" type="module"></script>
+    <script src="scripts/theme.js" type="module"></script>
+    <script src="scripts/router.js" type="module"></script>
+    <script src="scripts/projects.js" type="module"></script>
+    <script src="scripts/main.js" type="module"></script>
 </body>
 </html>
