update projects UI v2

--- a/index.html
+++ b/index.html
@@ -38,17 +38,19 @@
     <button class="modal-close">✕</button>
     <div class="modal-content">
       <div class="modal-image-container"></div>
-      <h2 class="modal-title"></h2>
-      <p class="modal-description"></p>
-      <div class="modal-features">
-        <h4>Особенности:</h4>
-        <ul class="features-list"></ul>
+      <div class="modal-content-body">
+        <h2 class="modal-title"></h2>
+        <p class="modal-description"></p>
+        <div class="modal-features">
+          <h4>Особенности:</h4>
+          <ul class="features-list"></ul>
+        </div>
+        <div class="modal-tasks">
+          <h4>Реализованные задачи:</h4>
+          <ul class="tasks-list"></ul>
+        </div>
+        <a href="#" class="github-link" target="_blank">Посмотреть на GitHub</a>
       </div>
-      <div class="modal-tasks">
-        <h4>Реализованные задачи:</h4>
-        <ul class="tasks-list"></ul>
-      </div>
-      <a href="#" class="github-link" target="_blank">Посмотреть на GitHub</a>
     </div>
   </div>
 
