--- a/index.html
+++ b/index.html
@@ -8,19 +8,38 @@
 </head>
 <body>
   <div class="app-container">
-    <div class="navbar-container">
-      <div class="navbar">
+    <!-- Объединенный навбар для десктопа -->
+    <div class="navbar-desktop">
+      <div class="navbar-top">
         <div class="navbar-name">Artem Kriukov</div>
-        
         <div class="navbar-tabs">
           <button class="navbar-tab active" data-content="about">About</button>
           <button class="navbar-tab" data-content="experience">Experience</button>
           <button class="navbar-tab" data-content="projects">Projects</button>
           <button class="navbar-tab" data-content="stack">Stack</button>
         </div>
-        
-        <button class="theme-toggle">
-          <span class="theme-icon">🌓</span>
+        <button class="theme-toggle"><span class="theme-icon">🌓</span></button>
+      </div>
+    </div>
+
+    <!-- Мобильные табы (отдельно внизу) -->
+    <div class="navbar-mobile">
+      <div class="mobile-tabs">
+        <button class="mobile-tab active" data-content="about">
+          <span class="tab-icon"></span>
+          <span class="tab-text">About</span>
+        </button>
+        <button class="mobile-tab" data-content="experience">
+          <span class="tab-icon"></span>
+          <span class="tab-text">Exp</span>
+        </button>
+        <button class="mobile-tab" data-content="projects">
+          <span class="tab-icon"></span>
+          <span class="tab-text">Projects</span>
+        </button>
+        <button class="mobile-tab" data-content="stack">
+          <span class="tab-icon"></span>
+          <span class="tab-text">Stack</span>
         </button>
       </div>
     </div>
