--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
           <button class="navbar-tab" data-content="projects">Projects</button>
           <button class="navbar-tab" data-content="stack">Stack</button>
         </div>
-        <button class="theme-toggle"><span class="theme-icon">🌓</span></button>
+        <div class="navbar-actions">
+          <button class="lang-toggle" title="Switch language">
+            <span class="lang-icon">🌐</span>
+            <span class="lang-text">EN</span>
+          </button>
+          <button class="theme-toggle">
+            <span class="theme-icon">🌓</span>
+          </button>
+        </div>
       </div>
     </div>
 
