finish translate project

--- a/index.html
+++ b/index.html
@@ -62,23 +62,19 @@
   <!-- Модальное окно -->
   <div class="modal-overlay"></div>
   <div class="modal-container">
-    <button class="modal-close">✕</button>
-    <div class="modal-content">
-      <div class="modal-image-container"></div>
-      <div class="modal-content-body">
-        <h2 class="modal-title"></h2>
-        <p class="modal-description"></p>
-        <div class="modal-features">
-          <h4>Особенности:</h4>
-          <ul class="features-list"></ul>
-        </div>
-        <div class="modal-tasks">
-          <h4>Реализованные задачи:</h4>
-          <ul class="tasks-list"></ul>
-        </div>
-        <a href="#" class="github-link" target="_blank">Посмотреть на GitHub</a>
+      <button class="modal-close">✕</button>
+      <div class="modal-content">
+          <div class="modal-image-container"></div>
+          <div class="modal-content-body">
+              <h2 class="modal-title"></h2>
+              <p class="modal-description"></p>
+              <div class="modal-tasks">
+                  <h4 class="modal-tasks-title">Реализованные задачи:</h4> <!-- Добавлен класс -->
+                  <ul class="tasks-list"></ul>
+              </div>
+              <a href="#" class="github-link" target="_blank">Посмотреть на GitHub</a>
+          </div>
       </div>
-    </div>
   </div>
 
   <script src="scripts/animator.js" type="module"></script>
