update theme switcher

--- a/index.html
+++ b/index.html
@@ -12,21 +12,32 @@
     <div class="navbar-desktop">
       <div class="navbar-top">
         <div class="navbar-name">Artem Kriukov</div>
+
         <div class="navbar-tabs">
           <button class="navbar-tab active" data-content="about">About</button>
           <button class="navbar-tab" data-content="experience">Experience</button>
           <button class="navbar-tab" data-content="projects">Projects</button>
           <button class="navbar-tab" data-content="stack">Stack</button>
         </div>
+
         <div class="navbar-actions">
+          
           <button class="lang-toggle" title="Switch language">
             <span class="lang-icon">🌐</span>
             <span class="lang-text">EN</span>
           </button>
-          <button class="theme-toggle">
-            <span class="theme-icon">🌓</span>
-          </button>
+
+          <div class="theme-switcher">
+            <div class="theme-switcher-track">
+              <div class="theme-switcher-handle">
+                <span class="theme-icon moon-icon">🌙</span>
+                <span class="theme-icon sun-icon">☀️</span>
+              </div>
+            </div>
+          </div>
+          
         </div>
+
       </div>
     </div>
 
