fix dropdown UI

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
               <span class="lang-arrow">▼</span>
             </button>
             <div class="lang-dropdown" hidden>
-              <button class="lang-option" data-lang="ru">Русский</button>
-              <button class="lang-option" data-lang="en">English</button>
+              <button class="lang-option" data-lang="ru">🇷🇺 Русский</button>
+              <button class="lang-option" data-lang="en">🇺🇸 English</button>
             </div>
           </div>
 
