--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
           <p class="modal-description"></p>
           <div class="modal-tasks">
-            <h4 class="modal-tasks-title">Реализованные задачи:</h4>
+            <h4 class="modal-tasks-title"></h4>
             <ul class="tasks-list"></ul>
           </div>
           <a href="#" class="github-link" target="_blank">Посмотреть на GitHub</a>
